# waldo

./: README.md  pyproject.toml
mike/: Flux_calibration.py  Gain_Calibration.py  binary_cube.py  cal.py  child_init.py  file_init.py  flux_calibration.py  gain_calibration.py  mike.py  sort.py  spectrum.py  test-plot.py  test_case.py  test_plot.py  thing.py  val.py  weather.py
mike/Tables/: oxygen_coefficients.txt  water_vapor_coefficients.txt
